[package]
name = "chadbuffer"
version = "0.1.0"
edition = "2021"
description = "Parallel data buffers for chads who want to put data onchain fast af"
license = "MIT"
authors = ["Dean Little <@deanmlittle>"]

[lib]
name = "chad_buffer"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.22"
sbpf-asm-macros = "0.1.1"
